test/good/tuples/decl03.px

[Float] b
a, b = [1], [2]
print a, b
