test/bad/arrays/decl08.px

a: [Int]
b: [[Rat]] = [[1/2], a]
